--- a/static/index.html
+++ b/static/index.html
@@ -108,6 +108,7 @@
           <span class='card' style='color: #4CAF50;'>9&#9827;</span>
           <span class='card' style='color: #F44336;'>10&#9829;</span>
           <span class='card' style='color: #2196F3;'>3&#9830;</span>
+          <span class='card' style='color: #2196F3;'>&#9760;</span>
         </span>
       </div>
     </div>
