other bits I forgot about

--- a/static/index.html
+++ b/static/index.html
@@ -192,9 +192,9 @@
       <p>Please wait for the leader to start the game.</p>
     </div>
     <div id='deck-actions' class='bean actions' style='display: none'>
-      <button class='draw-from-deck' data-destination='hand'>Draw Card</button>
-      <button class='draw-from-deck' data-destination='space'>Play Card to Me</button>
-      <button class='draw-from-deck' data-destination='center'>Play Card to Center</button>
+      <button class='draw-from-deck' data-destination='player_hand'>Draw Card</button>
+      <button class='draw-from-deck' data-destination='player_revealed'>Play Card to Me</button>
+      <button class='draw-from-deck' data-destination='game_revealed'>Play Card to Center</button>
       <button class='cancel'>Cancel</button>
     </div>
   </body>
