--- a/static/index.html
+++ b/static/index.html
@@ -110,6 +110,9 @@
       .selected {
         color: #FFD600;
       }
+      .card.selected {
+        background-color: #FFD600;
+      }
 
     </style>
   </head>
@@ -161,12 +164,12 @@
     <div id='playspace' class='large' style='display: none'>
     </div>
     <div id='deckspace' style='display: none'>
-      <span class='deck large' data-location='game_deck'></span>
+      <span class='deck large card-option' data-actions='#deck-actions' data-location='game_deck'></span>
       <span class='discard large'></span>
     </div>
     <div class='player' style='display: none'>
       <div class='name'></div>
-      <span class='deck large' data-location='player_deck'></span>
+      <span class='deck large card-option' data-actions='#deck-actions' data-location='player_deck'></span>
     </div>
     <div class='player' style='display: none'>
       <span class='revealed wallet large'>
@@ -199,7 +202,21 @@
       <button class='draw-from-deck' data-destination='player_hand'>Draw Card</button>
       <button class='draw-from-deck' data-destination='player_revealed'>Play Card to Me</button>
       <button class='draw-from-deck' data-destination='game_revealed'>Play Card to Center</button>
+      <button class='draw-from-deck' data-destination='game_revealed'>Draw All</button>
+      <button data-destination='player_hand'>Draw All</button>
+      <button data-destination='player_revealed'>Play All to Me</button>
+      <button data-destination='game_revealed'>Play All to Center</button>
+      <button data-destination='game_discarded'>Discard All</button>
       <button class='shuffle-deck'>Shuffle</button>
+      <button class='cancel'>Cancel</button>
+    </div>
+    <div id='card-actions' class='bean actions' style='display: none'>
+      <button class='move-card-to' data-destination='player_revealed'>Play to My Space</button>
+      <button class='move-card-to' data-destination='game_revealed'>Play to Center Space</button>
+      <button class='move-card-to' data-destination='player_deck'>Put on My Deck</button>
+      <button class='move-card-to' data-destination='player_deck'>Put on Game Deck</button>
+      <button class='move-card-to' data-destination='game_discarded'>Discard</button>
+      <button class='give-card'>Give Away</button>
       <button class='cancel'>Cancel</button>
     </div>
   </body>
@@ -207,7 +224,10 @@
   $(document).ready(function() {
     var playerCode = null;
     var gameToken = null;
-    function card_html(card) {
+    function card_html(card, location) {
+      return `<span class='card card-option' data-location='${location}' data-actions='#card-actions' style='color: ${card.color};' data-card='${card.name}' data-text="${card.text}">${card.name}</span>`
+    }
+    function other_card_html(card) {
       return `<span class='card' style='color: ${card.color};' data-text="${card.text}">${card.name}</span>`
     }
     function other_player_html(player) {
@@ -216,7 +236,7 @@
         <span class='deck'>${player.deck_size}</span>
         <span class='hand'>${player.hand_size}</span>
         <span class='wallet'>
-          ${ player.revealed.map(card_html) }
+          ${ player.revealed.map(other_card_html) }
         </span>
       </div>`;
     }
@@ -247,12 +267,12 @@
 
         $('#deckspace .deck').html(game_cards.deck_size);
         $('#deckspace .discard').html(game_cards.discard.length);
-        $('#playspace').html(game_cards.revealed.map(card_html).join(''));
+        $('#playspace').html(game_cards.revealed.map(c => card_html(c, "game_revealed")).join(''));
 
         $('.player .name').html(player.name);
         $('.player .deck').html(player.deck_size);
-        $('.player .revealed').html(player.revealed.map(card_html).join(''));
-        $('.player .hand').html(player.hand.map(card_html).join(''));
+        $('.player .revealed').html(player.revealed.map(c => card_html(c, "player_revealed")).join(''));
+        $('.player .hand').html(player.hand.map(c => card_html(c, "player_hand")).join(''));
       }
       return result;
     };
@@ -302,12 +322,26 @@
         });
       });
     });
-    $('.deck').click(function() {
+    $("body").on("click", ".card-option", function() { // TODO better
       $('.selected').removeClass('selected');
       $(this).addClass('selected');
       $('.actions').hide();
-      $('#deck-actions').show();
-      $('#deck-actions').data('location', $(this).data('location'));
+      var actions = $(this).data('actions');
+      $(actions).show();
+      $(actions).data('location', $(this).data('location'));
+      $(actions).data('card', $(this).data('card'));
+    });
+    $('.move-card-to').click(function() {
+      var holder = $(this).closest('.actions');
+      var location=holder.data('location');
+      var card=holder.data('card');
+      var destination=$(this).data('destination');
+      var path = `/games/${gameToken}/move/${playerCode}/${location}/${destination}/${card}`;
+      $.post(path, function(rawResult) {
+        var result = parseRawState(rawResult, 'playing');
+      });
+      $('.selected').removeClass('selected');
+      $('.actions').hide();
     });
     $('.actions .cancel').click(function() {
       $('.selected').removeClass('selected');
